Link to sub-blab.

--- a/main.html
+++ b/main.html
@@ -2,6 +2,8 @@
 
 <div id="text">
 
+  [http://puzlet.org/utility/combnk/, combnk sub-blab]
+
   <div class="left_col">
     <div data-file="main.coffee"></div>
   </div>    
